# clavier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/processed/bach/: bach.jsonl  bach_val.jsonl
data/raw/bach/: 01ausmei.abc  01saraba.abc  02ichdan.abc  03achgot.abc  04esistd.abc  04gigue.abc  04prelud.abc  05anwass.abc  07nunlob.abc  08freuet.abc  09ermunt.abc  bach_0003_2_ich_dank_dir_lieber_herre.abc  bach_0004_ach_gott_vom_himmel_sieh_darein_3_ach_gott_vom_himmel_sieh_darein_cantata_bwv_153_schau_lieber_gott_wie_meine_feind.abc  bach_0005_4_es_ist_das_heil_uns_kommen_her.abc  bach_0007_6_christus_der_ist_mein_leben.abc  bach_0009_8_freuet_euch_ihr_christen_alle.abc  bach_0014_13_allein_zu_dir_herr_jesu_christ.abc  bach_0015_14_o_herre_gott_dein_gottlich_wort.abc  bach_0017_16_es_woll_uns_gott_genadig_sein.abc  bach_0020_19_ich_hab_mein_sach_gott_heimgestellt.abc  bach_0021_20_ein_feste_burg_ist_unser_gott.abc  bach_0022_21_herzlich_tut_mich_verlangen.abc  bach_0023_22_schmucke_dich_o_liebe_seele.abc  bach_0025_24_valet_will_ich_dir_geben.abc  bach_0029_28_nun_komm_der_heiden_heiland.abc  bach_0030_29_freu_dich_sehr_o_meine_seele.abc  bach_0031_30_jesus_christus_unser_heiland.abc  bach_0032_31_ach_lieben_christen_seid_getrost.abc  bach_0033_32_nun_danket_alle_gott.abc  (+262 more)
scripts/: augment_data.py  batch_mid.py  preprocess_abc.py  train_tokenizer.py  ws.py
src/: dataset.py  export.py  generate.py  model.py  summary.py  tokenizer.json  train.py
(+7586 files in other folders)
